--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,7 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^1.0.4
   geolocator: ^8.2.0
-  flutter_downloader: ^1.7.3
+  dio: ^4.0.6
   path_provider: ^2.0.9
 
 # For information on the generic Dart part of this file, see the
