--- a/ios/Podfile
+++ b/ios/Podfile
@@ -33,6 +33,8 @@ target 'Runner' do
   
   platform :ios, '14.0'
   pod 'Mach1SpatialAPI', :path => 'Pod-Mach1SpatialAPI'
+  pod 'Firebase/Firestore'
+  pod 'Firebase/Core'
 
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
 end
